# templelib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
demo/: CMakeLists.txt  Makefile  main.c
src/: App.c  App.h  CMakeLists.txt  Colors.c  Colors.h  Ctrl.c  Ctrl.h  Glyphs.c  Glyphs.h  Gr.c  Gr.h  Input.c  Input.h  Makefile  Templelib.h  Win.c  WinCtrls.c  WinMgr.c  WinMgr.h  Window.c  Window.h  WindowCtrls.c  WindowCtrls.h  WindowDraw.c  WindowDraw.h  app.c  app.h  button.c  button.h  colors.c  colors.h  ctrl.c  ctrl.h  glyphs.c  glyphs.h  gr.c  gr.h  input.c  input.h  main.c  (+10 more)
src/Gr/: Gr.c  Gr.h  GrColors.c  GrColors.h  GrGlyphs.c  GrGlyphs.h  GrWin.c  GrWin.h
